Maybe prevent horizontal scrolling on Safari
Occurred on the Works page when images scaled up on hover.

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 html {
 	overflow-x: hidden;
+        overflow-y: scroll;
 }
 body {
 	padding-right: 0px !important; // can't quite figure out why MUI likes to change the padding when opening a menu or dialog
